[package]
name = "discopanic"
version = "0.1.0"
authors = ["Adam Curtis <adam.curtis.dev@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[workspace]
members = ["macros"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.69"
backtrace-ext = "0.2.1"
miette = { version = "5.10.0", features = ["fancy"] }
owo-colors = "3.5.0"
thiserror = "1.0.50"
